; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_expr.c_nullcall.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_expr.c_nullcall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_24__ = type { i64, i64, i32 }
%struct.TYPE_25__ = type { i32 }
%struct.TYPE_21__ = type { %struct.TYPE_23__ }
%struct.TYPE_23__ = type { %struct.TYPE_22__ }
%struct.TYPE_22__ = type { i32 }

@inttype = common dso_local global i32 0, align 4
@file = common dso_local global i64* null, align 8
@voidptype = common dso_local global i32 0, align 4
@lineno = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_25__* @nullcall(%struct.TYPE_24__* %0, i32 %1, %struct.TYPE_25__* %2, %struct.TYPE_25__* %3) #0 {
  %5 = alloca %struct.TYPE_25__*, align 8
  %6 = alloca %struct.TYPE_24__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_25__*, align 8
  %9 = alloca %struct.TYPE_25__*, align 8
  %10 = alloca %struct.TYPE_24__*, align 8
  store %struct.TYPE_24__* %0, %struct.TYPE_24__** %6, align 8
  store i32 %1, i32* %7, align 4
  store %struct.TYPE_25__* %2, %struct.TYPE_25__** %8, align 8
  store %struct.TYPE_25__* %3, %struct.TYPE_25__** %9, align 8
  %11 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %12 = call i64 @isarray(%struct.TYPE_24__* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %23

14:                                               ; preds = %4
  %15 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %16 = call %struct.TYPE_24__* @atop(%struct.TYPE_24__* %15)
  %17 = load i32, i32* %7, align 4
  %18 = load %struct.TYPE_25__*, %struct.TYPE_25__** %8, align 8
  %19 = load %struct.TYPE_25__*, %struct.TYPE_25__** %9, align 8
  %20 = call %struct.TYPE_25__* @nullcall(%struct.TYPE_24__* %16, i32 %17, %struct.TYPE_25__* %18, %struct.TYPE_25__* %19)
  %21 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %22 = call %struct.TYPE_25__* @retype(%struct.TYPE_25__* %20, %struct.TYPE_24__* %21)
  store %struct.TYPE_25__* %22, %struct.TYPE_25__** %5, align 8
  br label %69

23:                                               ; preds = %4
  %24 = load %struct.TYPE_25__*, %struct.TYPE_25__** %8, align 8
  %25 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call %struct.TYPE_24__* @unqual(i32 %26)
  %28 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 8
  %30 = call %struct.TYPE_24__* @unqual(i32 %29)
  store %struct.TYPE_24__* %30, %struct.TYPE_24__** %10, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %33 = load %struct.TYPE_25__*, %struct.TYPE_25__** %8, align 8
  %34 = load %struct.TYPE_25__*, %struct.TYPE_25__** %9, align 8
  %35 = load i32, i32* @inttype, align 4
  %36 = load %struct.TYPE_24__*, %struct.TYPE_24__** %10, align 8
  %37 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = call i32 @cnsttree(i32 %35, i64 %38)
  %40 = load i32, i32* @inttype, align 4
  %41 = load %struct.TYPE_24__*, %struct.TYPE_24__** %10, align 8
  %42 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = call i32 @cnsttree(i32 %40, i64 %43)
  %45 = load i64*, i64** @file, align 8
  %46 = icmp ne i64* %45, null
  br i1 %46, label %47, label %60

47:                                               ; preds = %23
  %48 = load i64*, i64** @file, align 8
  %49 = load i64, i64* %48, align 8
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %60

51:                                               ; preds = %47
  %52 = load i64*, i64** @file, align 8
  %53 = call %struct.TYPE_21__* @mkstr(i64* %52)
  %54 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %53, i32 0, i32 0
  %55 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %54, i32 0, i32 0
  %56 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 4
  %58 = call i32 @idtree(i32 %57)
  %59 = call i32 @pointer(i32 %58)
  br label %63

60:                                               ; preds = %47, %23
  %61 = load i32, i32* @voidptype, align 4
  %62 = call i32 @cnsttree(i32 %61, i64 0)
  br label %63

63:                                               ; preds = %60, %51
  %64 = phi i32 [ %59, %51 ], [ %62, %60 ]
  %65 = load i32, i32* @inttype, align 4
  %66 = load i64, i64* @lineno, align 8
  %67 = call i32 @cnsttree(i32 %65, i64 %66)
  %68 = call %struct.TYPE_25__* @vcall(i32 %31, %struct.TYPE_24__* %32, %struct.TYPE_25__* %33, %struct.TYPE_25__* %34, i32 %39, i32 %44, i32 %64, i32 %67, i32* null)
  store %struct.TYPE_25__* %68, %struct.TYPE_25__** %5, align 8
  br label %69

69:                                               ; preds = %63, %14
  %70 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  ret %struct.TYPE_25__* %70
}

declare dso_local i64 @isarray(%struct.TYPE_24__*) #1

declare dso_local %struct.TYPE_25__* @retype(%struct.TYPE_25__*, %struct.TYPE_24__*) #1

declare dso_local %struct.TYPE_24__* @atop(%struct.TYPE_24__*) #1

declare dso_local %struct.TYPE_24__* @unqual(i32) #1

declare dso_local %struct.TYPE_25__* @vcall(i32, %struct.TYPE_24__*, %struct.TYPE_25__*, %struct.TYPE_25__*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @cnsttree(i32, i64) #1

declare dso_local i32 @pointer(i32) #1

declare dso_local i32 @idtree(i32) #1

declare dso_local %struct.TYPE_21__* @mkstr(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
